v 1.0
Primera versión del proyecto Seal_Flush